# cc23xx-flash

./: Cargo.toml  README.md  template.yaml
.cargo/: config.toml
src/: main.rs
